<resources>
    <string name="app_name">Automotora</string>
    <string name="txtview1">Automotora Shift</string>
    <string name="txtview2">Usuario</string>
    <string name="txtview3">Contraseña</string>
    <string name="txtview4">Correo</string>
    <string name="txtview5">Repita contraseña</string>
    <string name="txtview6">Correo: automotora.shift@gmail.com</string>
    <string name="txtview7">Numero: +56991435763</string>
    <string name="txtview8">Seleccione la marca</string>
    <string name="txtview9">Seleccione el modelo</string>
    <string name="txtview10">Seleccione la sucursal</string>
    <string name="txtview11">¿Qué valor tiene nuestro servicio?</string>
    <string name="txtview12">Escribanos su opinión, ¿Algo se puede mejorar?</string>
    <string name="txtview13">Opiniones</string>
    <string name="txtview14">¿Cuantos dias de opiniones quiere ver?</string>
    <string name="edittxt1">Ingrese usuario</string>
    <string name="edittxt2">Ingrese contraseña</string>
    <string name="edittxt3">Ingrese su correo</string>
    <string name="edittxt4">Repita su contraseña</string>
    <string name="edittxt5">Ingrese su opinión</string>
    <string name="btn1">Ingresar</string>
    <string name="btn2">Registrar</string>
    <string name="btn3">Registrarse</string>
    <string name="btn4">Volver</string>
    <string name="btn5">Compra de autos</string>
    <string name="btn6">Catálogo</string>
    <string name="btn7">Mantenimiento</string>
    <string name="btn8">Contacto</string>
    <string name="btn9">Valorización del servicio</string>
    <string name="btn10">Servicio técnico</string>
    <string name="btn11">Repuestos</string>
    <string name="btn12">Desabolladuras</string>
    <string name="btn13">Cambio de pintura</string>
    <string name="btn14">Enviar</string>
    <string name="btn15">Gestionar Usuarios</string>
    <string name="btn16">Gestionar Vehiculos</string>
    <string name="btn17">Revisar opiniones</string>
    <string name="btn18">Generar boleta</string>
    <string name="descripcion1">logo</string>
    <string name="descripcion2">button</string>
    <string name="descripcion3">spinner</string>
    <string name="servicio_tecnico">Servicio Tecnico</string>
    <string name="seleccione_servicio">Seleccione tipo de servicio</string>
    <string name="cambioAceite">Cambio de aceite</string>
    <string name="mecanica">Mecanica Automotriz</string>
    <string name="diagnostico">Diagnostico</string>
    <string name="solicitarServicio">Solicitar Servicio</string>
    <string name="descrpcionServicio">Descripcion del servicio solicitado</string>
    <string name="cambioPintura">Cambio de Pintura</string>
    <string name="desabolladura">Desabolladura</string>
    <string name="repuestos">Repuestos</string>
    <string name="ingreseTipoVehiculo">Ingrese tipo de vehiculo</string>
    <string name="vehiculo">Vehiculo</string>
    <string name="IngreseMarca">Ingrese Marca del Vehiculo</string>
    <string name="marca">Marca</string>
    <string name="ingreseNuevocColor">Ingrese nuevo color</string>
    <string name="color">Color</string>
    <string name="solicitarCambioColor">Solicitar Cambio de Color</string>
    <string name="ingreseModelo">Ingrese Modelo</string>
    <string name="modelo">Modelo</string>
    <string name="ingreseRepuesto">Ingrese repuesto</string>
    <string name="respuesto">Respuesto</string>
    <string name="solicitarRepuesto">Solicitar Repuesto</string>
    <string name="solicitarDesabolladura">Solicitar Desabolladura</string>


</resources>